--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "dev": "vite",
     "server": "bun run server/index.ts",
-    "build": "vite build",
-    "build:dev": "vite build --mode development",
+    "build": "vite build && tsc -p tsconfig.server.json",
+    "start": "node dist-server/index.js",
     "lint": "eslint .",
     "preview": "vite preview",
     "test": "vitest run",
